--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -3,56 +3,5 @@
 html,
 body {
   min-height: 100vh;
-  @apply cursor-default;
-}
-
-@layer components {
-  .text-content {
-    @apply hover:text-white transition-colors;
-
-    h1, h2, h3, h4, h5, h6 {
-      @apply font-semibold;
-    }
-
-    h1 {
-      @apply mb-4 text-3xl;
-    }
-
-    h2 {
-      @apply mb-3 text-2xl;
-    }
-
-    h3 {
-      @apply mb-2 text-xl;
-    }
-
-    h4 {
-      @apply mb-1 text-lg;
-    }
-
-    p {
-      @apply mb-6 max-w-5xl;
-    }
-
-    ul,
-    ol {
-      @apply pl-4 mb-6 max-w-5xl;
-
-      li {
-        @apply mb-4;
-      }
-    }
-
-    ul {
-      @apply list-disc;
-    }
-
-    ol {
-      @apply list-decimal;
-    }
-
-    a {
-      @apply text-primary underline hover:no-underline hover:text-primary/75 dark:text-primary/75 dark:hover:text-primary transition-colors;
-    }
-  }
+  @apply cursor-default bg-color text-color;
 }
