--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -7,9 +7,82 @@
         @apply bg-primary-50 dark:bg-dark-gray;
     }
 
-    .text-color {
-        @apply text-dark-gray/80 dark:text-gray-300;
+  .text-color {
+    @apply text-dark-gray/80 dark:text-gray-300;
+  }
+
+  .scrollbar {
+    --scrollbar-thumb-color: var(--color-primary-500);
+    --scrollbar-track-color: var(--color-gray-100);
+
+    @media (prefers-color-scheme: dark) {
+      --scrollbar-track-color: var(--color-gray-800);
     }
+
+    --scrollbar-size: 6px;
+    --scrollbar-border-radius: 4px;
+
+    scrollbar-width: thin;
+    scrollbar-color: rgb(var(--scrollbar-thumb-color)) rgb(var(--scrollbar-track-color));
+
+    &::-webkit-scrollbar {
+      width: var(--scrollbar-size);
+      height: var(--scrollbar-size);
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background-color: rgb(var(--scrollbar-thumb-color));
+      border-radius: var(--scrollbar-size);
+    }
+
+    &::-webkit-scrollbar-track {
+      background-color: rgb(var(--scrollbar-track-color));
+    }
+
+    &::-webkit-scrollbar-corner {
+      background-color: transparent;
+    }
+
+    &::-webkit-resizer {
+      background-color: transparent;
+    }
+
+    &::-webkit-scrollbar-button,
+    &::-webkit-scrollbar-corner ,
+    &::-webkit-scrollbar-track-piece{
+      display: none;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      border-radius: var(--scrollbar-border-radius);
+    }
+
+    &::-webkit-scrollbar-thumb:hover {
+      background-color: rgb(var(--scrollbar-thumb-color));
+    }
+
+    &::-webkit-scrollbar-thumb:active {
+      background-color: rgb(var(--scrollbar-thumb-color));
+    }
+
+    &::-webkit-scrollbar-thumb:window-inactive {
+      background-color: rgb(var(--scrollbar-thumb-color));
+    }
+
+    &::-webkit-scrollbar-track {
+      background-color: rgb(var(--scrollbar-track-color));
+    }
+
+    &::-webkit-scrollbar-track:hover {
+      background-color: rgb(var(--scrollbar-track-color));
+    }
+
+    &::-webkit-scrollbar-track:active {
+      background-color: rgb(var(--scrollbar-track-color));
+    }
+
+
+  }
 
     .text-content {
         @apply hover:text-white transition-colors;
